[tool.poetry]
name = "production_plan_api"
version = "0.1.0"
description = "A REST API to calculate the production plan for power plants."
authors = ["Rafael S. Perez <rafaelperez.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.scripts]
production-plan = "src.app:app"  # This can be adjusted if you're using FastAPI or Flask

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
# pytest = "^6.2.4"
